# ChapAutomation

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml
cutom_napalm/: chap_asa_ssh.py  chap_fortios.py  chap_ios.py  chap_nxos_ssh.py  chap_wlc_ssh.py
cutom_napalm/utils/textfsm_templates/: cisco_asa_show_inventory.tpl  cisco_asa_show_version.tpl  cisco_nxos_show_fex.tpl  cisco_wlc_show_ap_config_general.tpl  cisco_wlc_show_ap_inventory_all.tpl  cisco_wlc_show_ap_stats_ethernet_summary.tpl  cisco_wlc_show_ap_summary.tpl  cisco_wlc_show_interface_detailed.tpl  cisco_wlc_show_interface_summary.tpl  cisco_wlc_show_inventory.tpl  cisco_wlc_show_port_detailed-info.tpl  cisco_wlc_show_port_summary.tpl  cisco_wlc_show_redundancy_detail.tpl  cisco_wlc_show_redundancy_summary.tpl
